<resources>
    <string name="app_name" translatable="false">SITARANAK</string>
    <string name="registration" translatable="false">Registration</string>
    <string name="user_id" translatable="false">User ID</string>
    <string name="password" translatable="false">Password</string>
    <string name="login" translatable="false">Login</string>
    <string name="register" translatable="false">Register</string>
    <string name="member_area" translatable="false">SITARANAK</string>
    <string name="enter_user_id" translatable="false">Enter user ID</string>
    <string name="enter_password" translatable="false">Enter password</string>
    <string name="invalid_user_id" translatable="false">Invalid user ID</string>
    <string name="wrong_password" translatable="false">Wrong password</string>
    <string name="no_internet_connection" translatable="false">No internet connection</string>
    <string name="an_error_ocurred" translatable="false">An error occurred</string>
    <string name="session_expired" translatable="false">Your session expired</string>
    <string name="please_wait" translatable="false">Please wait…</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="user_id_" translatable="false">User ID %s</string>
    <string name="member" translatable="false">Member</string>
    <string name="logout_" translatable="false">Logout?</string>
    <string name="menu_icon" translatable="false">Menu icon</string>
    <string name="kelompok_ternak" translatable="false">Kelompok ternak</string>
    <string name="lihat_coordinator" translatable="false">Lihat koordinator</string>
    <string name="data_peternak" translatable="false">Data peternak</string>
    <string name="data_ternak" translatable="false">Data ternak</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="edit_profile" translatable="false">Edit profile</string>
    <string name="lihat_tambah_data_ternak" translatable="false">Lihat/tambah data ternak</string>
    <string name="tambah_data_recording_ternak" translatable="false">Tambah data recording ternak</string>
    <string name="room_diskusi" translatable="false">Room diskusi</string>
    <string name="news_info" translatable="false">News/info</string>
    <string name="level" translatable="false">Level</string>
    <string name="region" translatable="false">Provonsi</string>
    <string name="kelompok" translatable="false">Kelompok</string>
    <string name="alamat" translatable="false">Alamat</string>
    <string name="alamat_korwil" translatable="false">Alamat korwil</string>
    <string name="loading_data" translatable="false">Loading data…</string>
    <string name="delete_" translatable="false">Delete?</string>
    <string name="delete" translatable="false">Delete</string>
    <string name="tambah_kelompok_ternak" translatable="false">Tambah Kelompok Ternak</string>
    <string name="forgot_password_" translatable="false">Forgot password?</string>
    <string name="reset_password" translatable="false">Reset Password</string>
    <string name="name_kelompok" translatable="false">Nama kelompok</string>
    <string name="add" translatable="false">Add</string>
    <string name="name_kelompok_ternak" translatable="false">Nama kelompok ternak</string>
    <string name="alamat_kelompok_ternak" translatable="false">Alamat kelompok ternak</string>
    <string name="this_field_is_mandatory" translatable="false">This field is mandatory</string>
    <string name="select_provinsi" translatable="false">Select Provinsi</string>
    <string name="please_select_provinsi" translatable="false">Please select region</string>
    <string name="sending_data" translatable="false">Sending data…</string>
    <string name="no_ktp" translatable="false">No KTP</string>
    <string name="no_hp" translatable="false">No HP</string>
    <string name="desa" translatable="false">Desa</string>
    <string name="kecamatan" translatable="false">Kecamatan</string>
    <string name="kabupaten" translatable="false">Kabupaten</string>
    <string name="nama_kelompok" translatable="false">Nama kelompok</string>
    <string name="alamat_kelompok" translatable="false">Alamat kelompok</string>
    <string name="koordinator" translatable="false">Koordinator</string>
    <string name="search_by_region" translatable="false">Search gion</string>
    <string name="scan_barcode" translatable="false">Scan barcode</string>
    <string name="search_by_userid" translatable="false">Search By User ID</string>
    <string name="search_by_region_code" translatable="false">Search by region code %s</string>
    <string name="select_kabupaten" translatable="false">Select Kabupaten</string>
    <string name="scan" translatable="false">Scan</string>
    <string name="search" translatable="false">Search</string>
    <string name="data_ternak_dibawahnya" translatable="false">Data Ternak Dibawahnya</string>
    <string name="search_by_userid_" translatable="false">Search by user ID %s</string>
    <string name="_by_region_" translatable="false">-region-</string>
    <string name="enter_user_id_or_select_region" translatable="false">Enter user ID or select region</string>
    <string name="no_data_found" translatable="false">No data found</string>
    <string name="jenis" translatable="false">Jenis</string>
    <string name="bangsa" translatable="false">Rumpun</string>
    <string name="kelmain" translatable="false">Kelamin</string>
    <string name="data_ternak_" translatable="false">Data ternak %s</string>
    <string name="name_as_on_id_card" translatable="false">Name as on ID card</string>
    <string name="id_card" translatable="false">ID card</string>
    <string name="id" translatable="false">ID</string>
    <string name="address" translatable="false">Address</string>
    <string name="email_address" translatable="false">Email address</string>
    <string name="postal_code" translatable="false">Postal code</string>
    <string name="birthday" translatable="false">Birthday</string>
    <string name="gender" translatable="false">Gender</string>
    <string name="employment" translatable="false">Employment</string>
    <string name="mother" translatable="false">Mother</string>
    <string name="save" translatable="false">Save</string>
    <string name="tempat_lahir" translatable="false">Tempat lahir</string>
    <string name="tambah_peternak" translatable="false">Tambah Peternak</string>
    <string name="_select_provinsi_" translatable="false">-select provinsi-</string>
    <string name="_select_kabupaten_" translatable="false">-select kabupaten-</string>
    <string name="_select_kecamatan_" translatable="false">-select kecamatan-</string>
    <string name="_select_desa_" translatable="false">-select village-</string>
    <string name="_select_status_pernikahan_" translatable="false">-select status pernikahan-</string>
    <string name="_select_gender_" translatable="false">-select gender-</string>
    <string name="_select_religion_" translatable="false">-select religion-</string>
    <string name="_select_level_" translatable="false">-select level-</string>
    <string name="koordinator_pusat" translatable="false">Koordinator pusat</string>
    <string name="koordinator_provinsi" translatable="false">Koordinator provinsi</string>
    <string name="koordinator_kabupaten" translatable="false">Koordinator kabupaten</string>
    <string name="peternak" translatable="false">Peternak</string>
    <string name="please_enter_valid_name" translatable="false">Enter name as on ID card</string>
    <string name="invalid_id_card" translatable="false">Invalid ID card</string>
    <string name="invalid_phone_number" translatable="false">Invalid phone number</string>
    <string name="invalid_email_address" translatable="false">Invalid email address</string>
    <string name="data_usaha" translatable="false">Data Usaha</string>
    <string name="data_peternak_camel" translatable="false">Data Peternak</string>
    <string name="data_usaha_camel" translatable="false">Data Usaha</string>
    <string name="nama_usaha" translatable="false">Nama usaha</string>
    <string name="please_select_kabupaten" translatable="false">Please select kabupaten</string>
    <string name="please_select_kecamatan" translatable="false">Please select kecamatan</string>
    <string name="please_select_desa" translatable="false">Please select desa</string>
    <string name="email_address_peternakan" translatable="false">Peternakan email address</string>
    <string name="no_hp_peternakan" translatable="false">Peternakan phone number</string>
    <string name="_select_status_peternakan_" translatable="false">Select status peternakan</string>
    <string name="please_select_status_peternakan" translatable="false">Please select status peternakan</string>
    <string name="_select_status_kelompok_" translatable="false">-select kelompok -</string>
    <string name="_select_kelompok_" translatable="false">-select kelompok-</string>
    <string name="please_select_individu_or_kelompok" translatable="false">Please select individu or kelompok</string>
    <string name="please_select_nama_kelompok" translatable="false">Please select nama kelompok</string>
    <string name="_select_nama_kelompok_" translatable="false">-select nama kelompok-</string>
    <string name="lokasi_usaha" translatable="false">Lokasi usaha</string>
    <string name="_select_jenis_komoditas_" translatable="false">-select commodity type-</string>
    <string name="please_select_jenis_komoditas" translatable="false">Please select jenis komoditas</string>
    <string name="_select_jenis_usaha_" translatable="false">-select jenis usaha-</string>
    <string name="please_select_jenis_usaha" translatable="false">Please select jenis usaha</string>
    <string name="_select_produk_penjualan_" translatable="false">-select produk penjualan-</string>
    <string name="_select_nama_olahan_" translatable="false">-select nama olahan-</string>
    <string name="please_reload_the_page" translatable="false">The page is not loaded completelly. Please reopen the page
	</string>
    <string name="pass_photo" translatable="false">Pass foto</string>
    <string name="need_to_access_media_storage" translatable="false">The app need to access media storage</string>
    <string name="nama_olahan" translatable="false">Nama olahan</string>
    <string name="uploading" translatable="false">Uploading… \n%s</string>
    <string name="done" translatable="false">Done</string>
    <string name="uploaded" translatable="false">Uploaded</string>
    <string name="upload_failed" translatable="false">Upload failed</string>
    <string name="tambah_data_ternak" translatable="false">Add Ternak Data</string>
    <string name="tempat_lahir_ternak" translatable="false">Tempat lahir ternak</string>
    <string name="tanggal_lahir_ternak" translatable="false">Tanggal lahir ternak</string>
    <string name="asal_ternak" translatable="false">Asal ternak</string>
    <string name="_select_nama_ternak_" translatable="false">-select nama ternak-</string>
    <string name="_select_jenis_ternak_" translatable="false">-select jenis ternak-</string>
    <string name="_select_bangsa_ternak_" translatable="false">-select rumpun ternak-</string>
    <string name="_select_metode_perkawinan_" translatable="false">-select metode perkawinan-</string>
    <string name="_select_tipe_kelahiran_" translatable="false">-select tipe kelahiran-</string>
    <string name="_select_jenis_kelamin_ternak_" translatable="false">-select jenis kelamin-</string>
    <string name="id_eartek" translatable="false">Id eartag</string>
    <string name="please_select_nama_ternak" translatable="false">Please select ternak name</string>
    <string name="please_select_bangsa_ternak" translatable="false">Please select rumpun ternak</string>
    <string name="please_select_jenis_ternak" translatable="false">Please select jenis ternak</string>
</resources>