<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/appbar_and_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/activity_data_ternak_di_bawahnya_ButtonScan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_camera"
            android:drawableStart="@drawable/ic_camera"
            android:text="@string/scan" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_data_ternak_di_bawahnya_EditTextUserId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_stroke_background"
            android:hint="@string/user_id"
            android:inputType="textCapCharacters"

            android:padding="5dp" />

        <ImageButton
            android:id="@+id/activity_data_ternak_di_bawahnya_ButtonSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            app:srcCompat="@drawable/ic_search_black" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_data_ternak_RecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingTop="70dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <ProgressBar
        android:id="@+id/activity_data_ternak_ProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
