<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:contentPadding="16dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingStart="8dp">

            <ImageView
                android:id="@+id/item_koordinator_ButttonDelete"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/selector_ic_delete" />

            <TextView
                android:layout_toStartOf="@id/item_koordinator_ButttonDelete"
                android:id="@+id/item_koordinator_TextViewNama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:textColor="@color/black_1"
                android:textSize="16sp"
                android:fontFamily="@font/nunito_black"
                android:text="Koordinator"
                android:textStyle="bold" />
        </RelativeLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_kelompok"
                    android:textColor="@color/black_1"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/item_koordinator_TextViewNamaKelompok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black_1"
                    android:textSize="12sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alamat_kelompok"
                    android:textColor="@color/black_1"
                    android:layout_marginTop="4dp"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/item_koordinator_TextViewAlamatKelompok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black_1"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:textSize="12sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/region"
                    android:textColor="@color/black_1"
                    android:layout_marginTop="4dp"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/item_koordinator_TextViewProvinsi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/black_1"
                    android:layout_marginStart="10dp"
                    android:textSize="12sp" />
            </TableRow>
        </TableLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
