<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zam.sidik_padang.login.LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="79dp"
        android:background="@android:color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="60dp"
            android:paddingEnd="40dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingStart="40dp">

            <ImageView
                android:id="@+id/activity_login_ImageViewLogo"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="top|center_horizontal"
                android:src="@drawable/logo_round"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical"
                tools:targetApi="lollipop">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="12dp"
                    android:textSize="30sp"
                    android:fontFamily="@font/nunito_bold"
                    android:textColor="@color/textPrimary"
                    android:text="Login" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/bg_text_round_primary"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:scaleType="centerInside"
                        app:tint="@color/textPrimary"
                        app:srcCompat="@drawable/ic_person" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:background="@color/colorPrimary" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/activity_login_EditTextUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/user_id"
                        android:inputType="textCapCharacters"
                        android:textColor="@color/textPrimary"
                        android:textSize="14sp"
                        android:layout_marginStart="12dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:background="@drawable/bg_text_round_primary"
                    android:orientation="horizontal"
                    android:layout_marginTop="12dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:scaleType="centerInside"
                        app:tint="@color/textPrimary"
                        app:srcCompat="@drawable/ic_lock" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:background="@color/colorPrimary" />

                    <EditText
                        android:id="@+id/activity_login_EditTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/password"
                        android:inputType="textPassword|textWebPassword"
                        android:textColor="@color/textPrimary"
                        android:textSize="14sp"
                        android:layout_marginStart="12dp" />

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/activity_login_ButtonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="12dp"
                    android:elevation="4dp"
                    android:background="@drawable/selector_btn_primary">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:text="@string/login"
                        android:textAllCaps="true"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@android:color/white" />
                </RelativeLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:paddingEnd="12dp">

                <TextView
                    android:id="@+id/activity_login_ButtonRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/selector_stroke_primary"
                    android:clickable="true"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingEnd="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/register"
                    android:textColor="@color/selector_text_primary"
                    android:focusable="true" />

                <TextView
                    android:id="@+id/activity_login_TextViewForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:paddingBottom="5dp"
                    android:paddingEnd="20dp"
                    android:paddingTop="5dp"
                    android:text="@string/forgot_password_"
                    android:textColor="@color/selector_text_accent"
                    android:focusable="true"
                    tools:ignore="RtlSymmetry" />

            </RelativeLayout>

            <!--
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/nunito_regular"
                android:text="Atas Kerjasama" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="7dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:adjustViewBounds="true"
                    android:padding="2dp"
                    android:src="@drawable/sidik_bulat_hijau" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="54dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/logo_pamekasan" />
            </LinearLayout>
            -->
        </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/wave_top" />
</RelativeLayout>

